--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern-Landing-Page</title>
     <link rel="stylesheet" href="style.css">
+
+    <title>Modern-Landing-Page</title>
 </head>
 <body>
-    <h1>Hello world</h1>
+    <header class="header">
+        <div class="logo-box">
+            <img src="" alt="">
+        </div>
+
+        <div class="text-box">
+            <h1 class="heading-primary">
+                <span class="heading-primary-main"></span>
+                <span class="heading-primary-sub"></span>
+            </h1>
+        </div>
+    </header>
+    
 </body>
 </html>
