added an img folder with a hero img and logo img

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <div class="logo-box">
-            <img src="" alt="">
+            <img src="img/hero-img.jpg" alt="Excited students">
         </div>
 
         <div class="text-box">
