--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <div class="logo-box">
-            <img src="img/hero-img.jpg" alt="Excited students">
+            <img src="img/hero-img.jpg" class="logo" alt="Excited students">
         </div>
 
         <div class="text-box">
