logo and hero image added, styling begun

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <div class="logo-box">
-            <img src="img/hero-img.jpg" class="logo" alt="Excited students">
+            <img src="img/logo.png" class="logo" alt="modern logo">
         </div>
 
         <div class="text-box">
