mapping out css

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
         <div class="text-box">
             <h1 class="heading-primary">
-                <span class="heading-primary-main"></span>
-                <span class="heading-primary-sub"></span>
+                <span class="heading-primary-main">CodeCrafters</span>
+                <span class="heading-primary-sub">Crafting Tomorrow's Coders Today</span>
             </h1>
         </div>
     </header>
