adding a button with a few classes to the html header

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                 <span class="heading-primary-main">codecrafters</span>
                 <span class="heading-primary-sub">crafting tomorrow's coders today</span>
             </h1>
+
+            <a href="#" class="btn btn-white">Learn Today</a>
         </div>
     </header>
     
