--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
             <a href="#" class="btn btn-white">Learn Today</a>
         </div>
     </header>
+
+    <main>
+        <section class="content">
+            <div id="cardContainer" class="card-container">
+                <!-- Dynamically adding cards with js here -->
+                 
+            </div>
+        </section>
+    </main>
     
 </body>
 </html>
