added a script js for card content, styled cards with css

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <section class="content">
             <div id="cardContainer" class="card-container">
                 <!-- Dynamically adding cards with js here -->
-                 
+
             </div>
         </section>
     </main>
-    
+    <script src="script.js"></script>
 </body>
 </html>
